# fandango-learn

./: .gitignore  Dockerfile  Dockerfile.eval  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: pypi-release.yml  python-tests.yml
demo/: demo.py
doc/: 01_fandango-learner.ipynb  02_refinement.ipynb  03_patterns.ipynb  combinations.ipynb  demo.py  fandango-learner.ipynb  iban.py  patterns.ipynb  refinement.ipynb  relevant-features.ipynb  xml.fan  xml.py  zero-division.py
evaluation/: eval_requirements.txt  evaluation_helper.py  heartbleed.py  middle.fan  middle.py  run_evaluation.py  run_experiments.sh
evaluation/calculator/: calculator.fan  calculator.py  evaluate_calculator.py
evaluation/def_use/: def_use.py
evaluation/dot/: dot.fan  dot.py
evaluation/expression/: expression.fan  expression.py
evaluation/grep/: evaluate_grep_3220317a.py  evaluate_grep_3c3bdace.py  evaluate_grep_5fa8c7c9.py  evaluate_grep_7aa698d3.py  evaluate_grep_c96b0f2c.py  evaluate_grepc96b0f2c.py
evaluation/heartbleed/: heartbeat.py  heartbleed.py
evaluation/learner/: evaluate_calculator.py
evaluation/learner/calculator/: evaluate_calculator.py
evaluation/learner/expression/: expression.fan  expression.py
evaluation/learner/grep/: evaluate_grep_3220317a.py  evaluate_grep_3c3bdace.py  evaluate_grep_7aa698d3.py  evaluate_grep_c96b0f2c.py
evaluation/learner/heartbleed/: heartbeat.py  heartbleed.py  test.py
evaluation/learner/markup/: markup.fan  markup.py  markup_gen.fan  (+1 more)
evaluation/markup/: generator.py  markup.py  markup_gen.fan
evaluation/middle/: middle.py
evaluation/pysnooper/: evaluate_pysnooper.py  pysnooper3.fan
evaluation/reducer/: calculator.py  heartbleed.py  middle.py
evaluation/refinement/: evaluate_caluclator_refinement.py  evaluate_heartbleed_refinement.py
evaluation/resources/: calculator.fan  heartbeat.py
evaluation_dbg/: base_experiment.py  evaluation_results_20250328-15-08-39.csv  run_evaluation.py  run_evaluation_alhazen.py  run_learner_experiments.py  run_learner_reducer_experiments.py  run_reducer_experiments.py  run_refinement_experiments.py  util.py
evaluation_dbg/grammars/: Calculator.fan  Heartbleed.fan  IBAN.fan  Markup1.fan  Markup2.fan  Middle.fan  Pysnooper1.fan  Pysnooper2.fan
evaluation_dbg/hypothesis_loop/: experiments.py  refinement_experiments.py
evaluation_dbg/learner/: experiments.py
evaluation_dbg/learner_reducer/: experiments.py
evaluation_dbg/reducer/: reducer_experiments.py
evaluation_dbg/refinement/: refinement_experiments.py
playground/: calculator.fan  calculator.py  draft.py  draft2.py  dynamic_eval.py  example.py  fandango-example.py  fandango_bug.py  forall.py  idea.py  log.py  negation.py  prototype.py  readme.py  universalquantifiertransformer.py  visitor_non_terminals.py  working-prototype.py  working-prototype2.py  working-prototype3.py
src/fandango-learn/: candidate.py  input.py  learner.py  metric.py
src/fandangoLearner/: __init__.py  candidate.py  combination.py  core.py  input.py  language.py  learner.py  logger.py  metric.py  repository.py  types.py
src/fdlearn/: __init__.py  learner.py  types.py
tests/: test_candidate.py  test_combination.py  test_features.py  test_generator.py  test_generator_engine.py  test_grammar.py  test_interface.py  test_mutation.py  test_patterns.py  test_placeholders.py  test_reachability_maps.py  test_relevant_feature_learner.py  test_runner.py  test_value_maps.py
tests/resources/: calculator.fan  calculator_extended.fan  grammar.fan  grammar_recursion.fan  grammar_recursion_plus.fan  grammar_with_minus.fan  grammar_with_quotes.fan
(+64 files in other folders)
