[build-system]
requires = ["setuptools >= 68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fandangoLearner"
version = "0.0.1"
authors = [
    { name = "Martin Eberlein", email = "martin.eberlein@hu-berlin.de" },
    { name = "José Antonio Zamudio Amaya", email = "jose.zamudio@cispa.de" },
    { name = "Marius Smytzek", email = "marius.smytzek@cispa.de" },
    { name = "Andreas Zeller", email = "andreas.zeller@cispa.de" },
]
readme = "README.md"
license = { file = "COPYING" }
requires-python = ">=3.11"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Testing"
]
dependencies = [
    "antlr4-python3-runtime>=4.13",
    "matplotlib>=3.9.2",
    "numpy>=2.1.0",
    "deap>=1.4.1",
    "scipy>=1.14.1",
    "ordered-set>=4.0.2",
    "pytest>=8.3.3",
    "Faker>=30.4.0",
    "docutils>=0.21.2",
    "tccbox==2024.7.1",
    "deprecation",
    "debugging-benchmark @ git+https://github.com/martineberlein/debugging-benchmark.git"
]

[project.optional-dependencies]
test = [
    "pytest>=7.2.2",
    "pytest-cov>=4.1.0",
    "pytest-html>=3.2.0",
    "pytest-rerunfailures>=11.1.2",
    "parameterized>=0.8.1",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.setuptools.package-data]
"avicenna" = ["resources/*"]
