[build-system]
requires = ["setuptools >= 68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fandango-learn"
version = "0.9.1"
authors = [
    { name = "Martin Eberlein", email = "martin.eberlein@hu-berlin.de" },
]
readme = "README.md"
license = { file = "COPYING" }
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Testing"
]
dependencies = [
    "pandas>=2.2.3",
    "shap>=0.45",
    "lightgbm>=4.3.0",
    "numpy>=1.23.2",
    "scikit-learn>=1.1.2",
]

[project.optional-dependencies]
test = [
    "pytest>=7.2.2",
    "pytest-cov>=4.1.0",
    "pytest-html>=3.2.0",
    "pytest-rerunfailures>=11.1.2",
    "parameterized>=0.8.1",
]

[tool.black]
line-length = 88
target-version = ['py311']
